@@ -2,6 +2,8 @@
 
 - Add @ConfigHidden annotation to prevent listing config values.
 - Add http proxy support in http client
+- Add IP_ENCODED_AS_HOSTNAME to internal address source. This ensures
+  compatibility with SNI when using automatic HTTPS configuration.
 
 208
 
